[add] 先生の名前と講義名で講義を追加できるように
