# api/@types/index.ts
@@ -31,5 +31,23 @@ export type Lecture_req = {
   year?: number | undefined
   term?: '春' | '秋' | '春1' | '春2' | '秋1' | '秋2' | undefined
   departmentId?: number | undefined
-  word?: string | undefined
+  teacherName?: string | undefined
+  lectureName?: string | undefined
+}
+
+/** pdfの詳細 */
+export type Pdf = {
+  id?: number | undefined
+  name?: string | undefined
+  user_id?: number | undefined
+  exam_id?: number | undefined
+  type?: string | undefined
+  created_at?: string | undefined
+  updated_at?: string | undefined
+}
+
+/** pdf一覧を返すためのオブジェクト */
+export type Pdf_list = {
+  pdfs?: Pdf[] | undefined
+  total?: number | undefined
 }
